5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_1576.log
== TEST (2019-05-23 11:12:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33))
		soma2 = soma2 + i
print(i)
-- ERROR:
File "XXXX", line 11
    elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33))
                                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:05) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:43) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:15) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:14) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:44) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:52) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:56) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
print(soma2 + soma1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:02) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
		i = i + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
		i = i + 1
	print(soma2 + soma1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:21:02) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
print(i)
-- EXECUTION TIME:
324.633
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:06) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:13) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:19) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:47) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:03) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:56) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
	elif(soma2 > soma1):
		print(i)
		print("BARSANULFO")
	else:
		print(i)
		print("EMPATE")
-- ERROR:
File "XXXX", line 17
    elif(soma2 > soma1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:32:23) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:32:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.567988
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:33:14) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1 
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.417008
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:33:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:33:35) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + i
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + i
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.333456
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:33:51) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.376089
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:34:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.423235
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:34:20) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:35:13) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.350122
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:44:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
a = size(v)
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v1[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.418613
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:33:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v1[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
0.439035
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-08 00:11:52) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v1[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-08 00:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
v1 = array(eval(input("v: ")))
i = 0 
soma1 = 0
soma2 = 0
while(i < size(v)):
	if ((v[i] == 11 and v1[i] == 33) or (v[i] == 33 and v1[i] == 22) or (v[i] == 22 and v1[i] == 11)):
		soma1 = soma1 + 1
	elif((v1[i] == 22 and v[i] == 11) or (v1[i] == 33 and v[i] == 22) or (v1[i] == 11 and v[i] == 33)):
		soma2 = soma2 + 1
	i = i + 1
if(soma1 > soma2):
	print(i)
	print("EUSAPIA")
elif(soma2 > soma1):
	print(i)
	print("BARSANULFO")
elif(soma1 == soma2):
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
